syntax = "proto3";

package shared.v1;

option go_package = "github.com/studyguides-com/study-guides-api/api/v1/shared;sharedv1";

import "google/protobuf/timestamp.proto";

message QuestionTag {
	string question_id = 1;
	string tag_id = 2;
	google.protobuf.Timestamp created_at = 3;
}